--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -43,35 +43,35 @@
             //     transform: scale(1.1, 1.1);
             //     transition: 0.3s;
             // }
+            .locatoing-rating {
+                width: 100%;
+                height: 30px;
+                padding-top: 5px;
+                display: flex;
+                justify-content: space-between;
+                color: var(--font-dark-color);
+            
+                .preview-rating-star {
+                    display: flex;
+                    align-self: center;
+            
+                    span {
+                        align-self: center;
+                    }
+            
+                    svg {
+                        align-self: center;
+                        height: 15px;
+                        width: 15px;
+            
+                        
+                    }
+                }
+            }
         }
     }
 }
 
-.locatoing-rating {
-    width: 100%;
-    height: 30px;
-    padding-top: 5px;
-    display: flex;
-    justify-content: space-between;
-    color: var(--font-dark-color);
-
-    .preview-rating-star {
-        display: flex;
-        align-self: center;
-
-        span {
-            align-self: center;
-        }
-
-        svg {
-            align-self: center;
-            height: 15px;
-            width: 15px;
-
-            path {}
-        }
-    }
-}
 
 .cycle-btn-container {
     display: flex;
@@ -120,9 +120,9 @@
 .explore-img-container {
     padding: 0;
     margin: 0;
-    max-width: 300px;
-    height: 300px;
-    aspect-ratio: 1/1;
+    max-width: 350px;
+    height: min-content;
+    aspect-ratio: 1/1 !important;
 
     .img-preview {
         width: 100%;
