--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -6,7 +6,7 @@
     grid-row: 1/2;
     grid-column: 1/-1;
     z-index: 50;
-    // position: sticky;
+    position: sticky;
 
 
     .header {
@@ -62,7 +62,7 @@
                     align-self: center;
                     display: flex;
                     max-width: 750px;
-                    margin-left: 5px;
+                    // margin-left: 5px;
                     gap: 5px;
 
                     .srchbtn {
@@ -71,7 +71,7 @@
                             cursor: pointer;
                             padding-top: 2px;
                             align-self: center;
-                            height: 47px;
+                            height: 47px !important;
                         }
 
                         &:hover {
@@ -141,7 +141,7 @@
                 display: flex;
 
                 .logo-img {
-                    width: fit-content;
+                    height: 50px;
                     align-self: flex-start;
                 }
             }
@@ -167,15 +167,23 @@
                     display: flex;
                     justify-content: center;
 
+                    img {
+                        margin-right: 10px;
+                        cursor: pointer;
+                        padding-top: 2px;
+                        align-self: center;
+                        height: 52px !important;
+                    }
+
                     >* {
                         align-self: center;
                     }
                 }
 
-                // &:hover {
-                //     border-radius: 20px;
-                //     background-color: var(--font-lightgray-color);
-                // }
+                &:hover {
+                    border-radius: 20px;
+                    background-color: var(--font-lightgray-color);
+                }
             }
 
             .searchbar-fullHeaderOn {
@@ -184,7 +192,7 @@
                 border-radius: 35px;
                 // width: 575px;
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 justify-content: space-between;
                 border: 1px solid var(--font-lightgray-color);
                 box-shadow: 0px 2px 5px var(--font-gray-color);
@@ -210,7 +218,7 @@
                             cursor: pointer;
                             padding-top: 2px;
                             align-self: center;
-                            height: 47px;
+                            height: 52px !important;
                         }
 
                         &:hover {
@@ -371,8 +379,8 @@
                             justify-content: space-evenly;
                             height: 160px;
                             transition: 0.4s;
-                            <<<<<<< HEAD=======padding: 2px;
-                            >>>>>>>73ddd1db35c320eff9f412fe2fc132482024ffb1
+                            padding: 2px;
+
                         }
                     }
 
@@ -404,23 +412,27 @@
             }
 
         }
+    }
+}
 
-        .full-header {
-            height: 75px !important;
-            // top:0 !important;
-            background-color: var(--card-background-color);
-            color: var(--font-dark-color);
-            transition: 0.3s;
-            width: 100%;
-        }
 
-        input,
-        label {
-            display: block;
-        }
 
-        .user-img {
-            border-radius: 50%;
-            height: 30px;
-            width: 30px;
-        }
+.full-header {
+    height: 75px !important;
+    // top:0 !important;
+    background-color: var(--card-background-color);
+    color: var(--font-dark-color);
+    transition: 0.3s;
+    width: 100%;
+}
+
+input,
+label {
+    display: block;
+}
+
+.user-img {
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+}
