--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -371,8 +371,8 @@
                             justify-content: space-evenly;
                             height: 160px;
                             transition: 0.4s;
-                            <<<<<<< HEAD=======padding: 2px;
-                            >>>>>>>73ddd1db35c320eff9f412fe2fc132482024ffb1
+                            padding: 2px;
+                        
                         }
                     }
 
@@ -424,3 +424,5 @@
             height: 30px;
             width: 30px;
         }
+    }
+}
