--- a/src/styles/components/stay-page/stay-details.scss
+++ b/src/styles/components/stay-page/stay-details.scss
@@ -25,9 +25,9 @@
     }
 
     p {
-        color: var(--font-gray-color);
-        padding-top: 8px;
-        margin: 0;
+        color: var(--font-dark-color);
+        padding: 0px;
+        margin: 0px;
     }
 
     .stay-host-info {
