--- a/src/styles/setup/variables.scss
+++ b/src/styles/setup/variables.scss
@@ -8,5 +8,6 @@
     --hart-background-color:rgba(248, 248, 248,0.5);
     --font-gray-see-throw-color:rgba(88, 88, 88, 0.7);
     --font-dark-color:rgb(61, 61, 61);
+    --font-dark-color-order:rgb(34, 34, 34);
     --logo-color:rgb(255, 90, 95);
 }
