--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -77,6 +77,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
+    z-index: 25;
     top: -65%;
 
     .next-btn {
@@ -114,6 +115,9 @@
         cursor: pointer;
         transition: 0.5s;
     }
+    :hover{
+        opacity: 1;
+    }
 }
 
 
@@ -121,8 +125,9 @@
     padding: 0;
     margin: 0;
     max-width: 350px;
-    height: min-content;
+    max-height:350px;
     aspect-ratio: 1/1 !important;
+    overflow: hidden;
 
     .img-preview {
         width: 100%;
