--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -74,12 +74,12 @@
 
     .slider-container {
         height: 75px;
-        width: 220px;
+        width: 240px;
         justify-content: center;
         align-items: center;
-        position: a;
+        position: absolute;
         top: 230px;
-        left: 200px;
+        left: 10%;
         z-index: 150;
         // padding-left: 15px;
         border-radius: 10px;
