--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -168,9 +168,9 @@
                     justify-content: center;
 
                     img {
-                        margin-right: 10px;
+                        margin-right: 3px;
                         cursor: pointer;
-                        padding-top: 2px;
+                        // padding-top: 2px;
                         align-self: center;
                         height: 52px !important;
                     }
