--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -76,9 +76,11 @@
 .cycle-btn-container {
     display: flex;
     justify-content: space-between;
+    height: 100%;
     position: relative;
+    padding: 0 15px;
     z-index: 25;
-    top: -65%;
+    top: -113%;
 
     .next-btn {
         z-index: 25;
@@ -87,13 +89,14 @@
         opacity: 0;
         width: 30px;
         height: 30px;
-        position: relative;
+        align-self: center;
+        // position: relative;
         // top: -330px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: var(--font-dark-color);
-        right: 20px;
+        // right: 20px;
         cursor: pointer;
         transition: 0.5s;
     }
@@ -105,9 +108,10 @@
         opacity: 0;
         width: 30px;
         height: 30px;
-        position: relative;
+        align-self: center;
+        // position: relative;
         // top: -330px;
-        left: 20px;
+        // left: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
