--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -20,6 +20,7 @@
             line-height: 18px;
             border-radius: 20px;
             // row-gap: 10px;
+            cursor: pointer;
 
             h3 {
                 font-size: 18px;
