--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -24,7 +24,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-
+            cursor: pointer;
             // .searchbar-container {
             //     align-self: flex-end;
             //     // display: flex;
@@ -139,6 +139,7 @@
                 transition: 0.6s;
                 width: 260px;
                 display: flex;
+                cursor: pointer;
 
                 .logo-img {
                     height: 50px;
