--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -85,7 +85,7 @@
             .city-card {
                 justify-content: space-evenly;
                 border-radius: 20px;
-
+                cursor: pointer;
                 width: 400px;
                 // gap: 15px;
                 background-color: var(--card-background-color);
