--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -142,7 +142,7 @@
     }
 
     .heart-btn {
-        // z-index: 10;
+        z-index: 26;
         width: 30px;
         height: 30px;
         display: inline-block;
