--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,6 +36,7 @@
 @import 'components/stay-page/stay-map.scss';
 @import 'components/stay-page/amenities-modal.scss';
 @import 'components/stay-page/order-msg-modal.scss';
+@import 'components/stay-page/add-review.scss';
 
 // host
 @import 'components/host.scss';
