--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -17,9 +17,11 @@
             justify-content: space-between;
         }
 
-        // .score-category-num{
-            
-        // }
+        .score-category-num{
+            font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
+            font-size: 13px;
+            line-height: 12px;
+        }
 
     }
 
