--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -132,10 +132,24 @@
             justify-content: space-between;
             margin-bottom: 10px;
             color: var(--font-dark-color-order);
+
+            u {
+                font-size: 16px;
+            }
+        }
+
+        .nights-price {
+            u {
+                font-size: 16px;
+            }
         }
 
         .service-fees {
             justify-content: space-between;
+
+            u {
+                font-size: 16px;
+            }
         }
 
         .total-price {
@@ -148,6 +162,7 @@
                 // margin-right: 10px;
                 padding: 0;
                 align-self: center;
+                font-size: 16px;
             }
         }
     }
