--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100vh;
     max-height: 85vh;
-    top: 75%;
+    // top: 75%;
     right: 50%;
     transform: translate(50%, 50%);
 
