--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100vh;
     height: 85vh;
-    top: 160%;
+    // top: 160%;
     right: 50%;
     transform: translate(50%, 50%);
 
