--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
     background-color: var(--main-background-color);
+    z-index: 100;
 
     >* {
         align-self: center;
