--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -40,10 +40,6 @@
                 }
             }
 
-            // &:hover {
-            //     transform: scale(1.1, 1.1);
-            //     transition: 0.3s;
-            // }
             .locatoing-rating {
                 width: 100%;
                 height: 30px;
@@ -153,24 +149,18 @@
         align-items: center;
         font-size: 25px;
         border-radius: 50%;
-        color: var(--logo-color);
+        color: var(--card-background-color);
         // opacity: 0.7;
         cursor: pointer;
 
-        // &.full-hart-btn {
-        //     span {
-        //         color: var(--logo-color);
-        //         opacity: 1;
-        //     }
-        // }
+        &.full {
+            color: var(--logo-color);
 
-        // &.empty-hart-btn {
-        //     span {
-        //         color: var(--font-gray-color);
-        //         opacity: 0.1;
+        }
 
-        //     }
-        // }
+        &.empty {
+            opacity: 0.5;
+        }
     }
 }
 
