--- a/src/styles/components/stay-page/stay-details.scss
+++ b/src/styles/components/stay-page/stay-details.scss
@@ -74,7 +74,7 @@
     transition: opacity .8s;
 }
 
-.modal-screen-open  {
+.modal-screen-open {
     position: fixed;
     top: 0;
     right: 0;
@@ -82,5 +82,11 @@
     min-height: 100%;
     min-width: 100%;
     background-color: var(--font-gray-see-throw-color);
-    transition:  0.8s;
+    transition: 0.8s;
+}
+
+.stay-gray-box-shadow {
+    padding-bottom: 5%;
+    padding-top: 2%;
+    box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
 }
