--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -4,8 +4,7 @@
     max-height: 85vh;
     // top: 75%;
     right: 50%;
-    transform: translate(50%, 50%);
-
+    transform: translatex(50%);
     border: 1px solid var(--font-lightgray-color);
     border-radius: 20px;
     background-color: var(--card-background-color);
