--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -4,7 +4,7 @@
     height: 85vh;
     // top: 160%;
     right: 50%;
-    transform: translate(50%, 50%);
+    transform: translatex(50%);
 
     border: 2px solid var(--font-lightgray-color);
     border-radius: 20px;
