--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,6 +1,6 @@
 .reviews-modal {
     position: absolute;
-    width: 100vh;
+    width: 64%;
     height: 85vh;
     // top: 160%;
     right: 50%;
