--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -1,6 +1,6 @@
 .amenities-modal {
     position: absolute;
-    width: 100vh;
+    width: 64%;
     max-height: 85vh;
     // top: 75%;
     right: 50%;
