--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -1,7 +1,7 @@
 .amenities-modal {
     position: absolute;
     width: 64%;
-    max-height: 85vh;
+    max-height: 80%;
     // top: 75%;
     right: 50%;
     transform: translatex(50%);
