--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -1,7 +1,7 @@
 .reviews-modal {
     position: absolute;
     width: 64%;
-    height: 85vh;
+    height: 80%;
     // top: 160%;
     right: 50%;
     transform: translatex(50%);
