--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -76,8 +76,11 @@
         padding-top: 15px;
 
         & span {
+            align-self: center;
+            font-size: 24px;
             cursor: pointer;
-            margin: 20px;
+            margin-right: 20px;
+            margin-top: 20px;
             // padding: 10px;
         }
     }
