--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -24,6 +24,13 @@
         .login-btn {
             width: 80px;
             padding: 4px;
+            background-color: transparent;
+            // cursor: pointer;
+            // border: var(--filter-button_border,1px solid var(--j-qkgmf));
+            // border-radius: var(--b-y-unon);
+            // margin: 0;
+            // padding: 7px 0;
+        
         }
 
     }
