--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -1,42 +1,63 @@
 .order-modal {
-    background-color: var(--scores-background-color);
-    height: 400px;
-    // width: 500px;
-    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
-    border: 1px solid rgb(221, 221, 221);
-    border-radius: 12px;
+    height: 420px;
     z-index: 1000;
-    padding-left: 10px;
+    padding: 20px;
     position: absolute;
-    width: 30%;
-    // max-height: 80%;
+    width: 28%;
     right: 50%;
     transform: translate(50%);
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    border: 1px solid var(--font-lightgray-color);
+    border-radius: 20px;
+    background-color: var(--main-background-color);
+    z-index: 1000;
+    // width: 500px;
+    // border: 1px solid rgb(221, 221, 221);
+    // border-radius: 12px;
+    // max-height: 80%;
+    // background-color: var(--scores-background-color);
 
     .order-stay-name {
-        font-size: 22px;
+        font-size: 18px;
+        margin-bottom: 0;
+        padding-top: 0;
     }
 
-    .check-in-out {
-        display: flex;
-        gap: 10px;
-        font-size: 18px;
-        margin: 3px;
-    }
+
 
     h4 {
+        color: var(--logo-color);
+        font-family: circular-bold;
         text-align: center;
-        font-size: 18px;
+        margin: 0;
+        padding: 15px 0;
+        font-size: 24px;
     }
 
 
     .dates-order {
         display: flex;
         gap: 30px;
+        padding-top: 15px;
+        padding-bottom: 5%;
+        box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
+        .check-in-out {
+            display: flex;
+            gap: 10px;
+            font-size: 18px;
+            margin: 3px;
+            b{
+                font-size: 16px;
+            }
+        }
     }
 
     .order-guests {
         flex-direction: column;
+        margin: 0;
+        padding-top: 10px;
+        padding-bottom: 5%;
+        box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
 
         .order-guests-total {
             display: flex;
@@ -49,7 +70,7 @@
             display: flex;
             gap: 5px;
             margin: 3px;
-            font-size: 16px;
+            font-size: 18px;
         }
     }
 
@@ -57,7 +78,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 10px;
+        // padding: 0px 0px 20px 0px;
     }
 
     .order-total-price b {
@@ -68,7 +89,7 @@
     }
 
     .order-added-msg {
-        font-size: 16px;
+        // font-size: 16px;
     }
 
 }
