--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -305,33 +305,42 @@
 
 
             .login-slide-modal {
-                color: var(--font-dark-color);
                 width: 160px;
+                // height: fit-content;
+                color: var(--font-gray-color);
                 background-color: var(--main-background-color);
-                box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+                // box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
                 border: 1px solid rgb(221, 221, 221);
                 border-radius: 10px;
                 display: none;
                 position: absolute;
                 top: 65px;
-                right: 184px;
+                right: 10%;
                 justify-content: center;
                 align-items: center;
-                padding: 10px 0;
+                // padding: 10px 0;
+                
+                // display: flex;
+                // flex-direction: column;
+                background-color: #fff;
+                border-radius: 12px;
+                box-shadow: 0 0 3px 0 rgb(0 0 0 / 18%);
+                
 
-                :first-child {
-                    // border-radius: 20px 0 0 0;
-                    margin-top: 20px;
-                }
+                // :first-child {
+                //     // border-radius: 20px 0 0 0;
+                //     margin-top: 20px;
+                // }
 
-                :last-child {
-                    margin-bottom: 20px;
-                    // border-radius: 0 0 20px 20px;
-                }
+                // :last-child {
+                //     margin-bottom: 20px;
+                //     // border-radius: 0 0 20px 20px;
+                // }
 
                 .menu-btn-container {
+                    padding: 10px 0;
                     display: flex;
-                    gap: 5px;
+                    gap: 10px;
                     flex-direction: column;
                     justify-content: space-evenly;
 
@@ -345,23 +354,27 @@
                     }
 
                         .login-opt-btn {
+                            font-size: 18px;
                             margin: 0;
-                            gap: 5px;
-                            width: 80%;
+                            padding: 5px 0px;
+                            gap: 10px;
+                            width: 94%;
+                            padding-left: 10px;
                             // border-radius: 20px 20px 20px 20px;
                             display: flex;
                             flex-direction: row;
                             height: 1.1em;
                             justify-content: flex-start;
-                            margin-left: 20px;
+                            // margin-left: 20px;
                             // overflow: hidden;
                             // box-sizing: border-box;
 
 
                             &:hover {
-                                background-color: var(--btn-background-color);
+                                background-color: var( --btn-background-color) ;
 
                             }
+                          
                         }
 
                         .nav-btn {
@@ -376,9 +389,9 @@
                     gap: 5px;
                     flex-direction: column;
                     justify-content: space-evenly;
-                    height: 160px;
+                    height: fit-content;
                     transition: 0.4s;
-                    padding: 2px;
+                    // padding: 2px;
 
 
                     
@@ -391,7 +404,7 @@
                     border-radius: 10px 0 10px 10px;
                     position: absolute;
                     top: 36px;
-                    right: 164px;
+                    right:10%;
                     padding: 6px;
                     justify-content: center;
                     align-items: center;
