--- a/src/styles/setup/variables.scss
+++ b/src/styles/setup/variables.scss
@@ -6,6 +6,7 @@
     --font-lightgray-color:rgb(200,200,200);
     --font-gray-color:rgb(113,113,113);
     --hart-background-color:rgba(248, 248, 248,0.5);
+    --btn-background-color:rgba(248, 248, 248,0.7);
     --font-gray-see-throw-color:rgba(88, 88, 88, 0.7);
     --font-dark-color:rgb(61, 61, 61);
     --font-dark-color-order:rgb(34, 34, 34);
