--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -29,7 +29,7 @@
             width: fit-content;
             min-width: 80px;
             height: 42px;
-            margin: 8px ;
+            margin: 8px;
             // padding: 0 0.5%;
             border-radius: 25px;
             color: var(--font-dark-color);
@@ -45,20 +45,33 @@
         }
 
         .filter-label-btn-on {
-            width: 85px;
-            height: 42px;
-            margin: 4px;
-            border-radius: 20px;
             display: flex;
             justify-content: center;
+            width: fit-content;
+            font-family: circular-medium;
+            min-width: 80px;
+            height: 42px;
+            margin: 8px;
+            border-radius: 25px;
             color: var(--font-dark-color);
-            // background-color: var(--btn-background-color);
             border: 1px solid var(--font-dark-color);
-            box-shadow: 0 0 2px var(--font-dark-color);
-
+            box-shadow: 0 0 2px var(--font-lightgray-color);
+            cursor: pointer;
+            
             span {
                 align-self: center;
+                margin: 0 24px;
             }
+            // width: 85px;
+            // height: 42px;
+            // margin: 4px;
+            // border-radius: 20px;
+            // display: flex;
+            // justify-content: center;
+            // color: var(--font-dark-color);
+            // // background-color: var(--btn-background-color);
+            // border: 1px solid var(--font-dark-color);
+            // box-shadow: 0 0 2px var(--font-dark-color);
         }
 
         .filter-form-label1 {
@@ -73,12 +86,12 @@
     }
 
     .slider-container {
-        height: 75px;
+        height: 80px;
         width: 240px;
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 230px;
+        top: 14%;
         left: 10%;
         z-index: 150;
         // padding-left: 15px;
@@ -88,6 +101,8 @@
         border: 1px solid var(--font-gray-color);
         display: flex;
         flex-direction: column;
+        font-family: circular-bold;
+
         .css-187mznn-MuiSlider-root {
 
             display: flex;
