--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -1,20 +1,23 @@
-
-
 .login-page {
     color: var(--font-dark-color);
     z-index: 100;
     position: fixed;
     right: 60px;
-    top:120px;
+    top: 120px;
     padding: 14px;
-    border: 2px solid var(--font-dark-color);
-    border-radius: 20px;
-    background-color: var(--main-background-color);
+    // border: 2px solid var(--font-dark-color);
+    // border-radius: 20px;
+    // background-color: var(--main-background-color);
     transform: translateX(150%);
     transition: transform .6s;
+    border: 1px solid var(--font-lightgray-color);
+    border-radius: 20px;
+    background-color: var(--card-background-color);
 
 
-    .login-form{
+
+
+    .login-form {
         width: 280px;
         height: 160px;
         display: flex;
@@ -22,21 +25,61 @@
         justify-content: space-evenly;
 
         .login-btn {
-            width: 80px;
-            padding: 4px;
-            background-color: transparent;
+            display: flex;
+            justify-content: center;
+            width: fit-content;
+            min-width: 80px;
+            // height: 42px;
+            // margin: 8px;
+            // padding: 0 0.5%;
+            border-radius: 25px;
+            color: var(--font-dark-color);
+            // background-color: var(--btn-background-color);
+            border: 1px solid var(--font-gray-color);
+            box-shadow: 0 0 2px var(--font-lightgray-color);
+            cursor: pointer;
+            align-self: center;
             // cursor: pointer;
             // border: var(--filter-button_border,1px solid var(--j-qkgmf));
             // border-radius: var(--b-y-unon);
             // margin: 0;
             // padding: 7px 0;
-        
+
+        }
+        input{
+            background-color: var( --btn-background-color)!important;
+            color: var(--font-gray-color);
+            border: 1px solid var(--font-gray-color);
+            box-shadow: 0 0 2px var(--font-lightgray-color);
+            border-radius: 5px;
+
         }
 
     }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     .move-to-signup {
-        width: 80px;
-        padding: 4px;
+        // width: 80px;
+        // padding: 4px;
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+        min-width: 80px;
+        // height: 42px;
+        margin-top: 8px;
+        // padding: 0 0.5%;
+        border-radius: 25px;
+        color: var(--font-dark-color);
+        // background-color: var(--btn-background-color);
+        border: 1px solid var(--font-gray-color);
+        box-shadow: 0 0 2px var(--font-lightgray-color);
+        cursor: pointer;
+        align-self: center;
     }
 
     .login-page-open & {
@@ -44,7 +87,7 @@
         pointer-events: auto;
         transition: transform .6s;
     }
- 
+
 }
 
 
@@ -59,14 +102,13 @@
     min-width: 100%;
     background-color: var(--font-gray-see-throw-color);
     opacity: 0;
-    transition:opacity .8s;
+    transition: opacity .8s;
 
-    .login-screen-open &{
+    .login-screen-open & {
         transform: translateX(0);
         transition: transform .0s;
         opacity: 1;
         z-index: 90;
-        transition:opacity .8s;
+        transition: opacity .8s;
     }
 }
-
