--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -19,8 +19,10 @@
 
     .login-form {
         width: 280px;
-        height: 160px;
+        height: fit-content;
         display: flex;
+        gap:5px;
+        padding-top: 7px;
         flex-direction: column;
         justify-content: space-evenly;
 
@@ -53,6 +55,19 @@
             box-shadow: 0 0 2px var(--font-lightgray-color);
             border-radius: 5px;
 
+        }
+        button{
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+        min-width: 80px;
+        margin-top: 8px;
+        border-radius: 25px;
+        color: var(--font-dark-color);
+        border: 1px solid var(--font-gray-color);
+        box-shadow: 0 0 2px var(--font-lightgray-color);
+        cursor: pointer;
+        align-self: center;
         }
 
     }
