--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -4,6 +4,7 @@
     position: fixed;
     right: 60px;
     top: 120px;
+    font-size: 14px;
     padding: 14px;
     // border: 2px solid var(--font-dark-color);
     // border-radius: 20px;
@@ -21,7 +22,7 @@
         width: 280px;
         height: fit-content;
         display: flex;
-        gap:5px;
+        gap: 10px;
         padding-top: 7px;
         flex-direction: column;
         justify-content: space-evenly;
@@ -48,26 +49,29 @@
             // padding: 7px 0;
 
         }
-        input{
-            background-color: var( --btn-background-color)!important;
+
+        input {
+            font-size: 14px;
+            background-color: var(--btn-background-color) !important;
             color: var(--font-gray-color);
             border: 1px solid var(--font-gray-color);
             box-shadow: 0 0 2px var(--font-lightgray-color);
             border-radius: 5px;
 
         }
-        button{
-        display: flex;
-        justify-content: center;
-        width: fit-content;
-        min-width: 80px;
-        margin-top: 8px;
-        border-radius: 25px;
-        color: var(--font-dark-color);
-        border: 1px solid var(--font-gray-color);
-        box-shadow: 0 0 2px var(--font-lightgray-color);
-        cursor: pointer;
-        align-self: center;
+
+        button {
+            display: flex;
+            justify-content: center;
+            width: fit-content;
+            min-width: 80px;
+            margin-top: 8px;
+            border-radius: 25px;
+            color: var(--font-dark-color);
+            border: 1px solid var(--font-gray-color);
+            box-shadow: 0 0 2px var(--font-lightgray-color);
+            cursor: pointer;
+            align-self: center;
         }
 
     }
@@ -118,6 +122,7 @@
     background-color: var(--font-gray-see-throw-color);
     opacity: 0;
     transition: opacity .8s;
+    font-size: 14px;
 
     .login-screen-open & {
         transform: translateX(0);
