--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -13,29 +13,32 @@
         h5 {
             color: var(--font-gray-color);
             margin: 0 0 10px 0;
-            
+
         }
 
-        p{
+        p {
             margin: 0 0 10px 0;
         }
 
         .review-preview-header {
-
-            .review-heading{
-
+            .review-heading {
                 display: flex;
-                justify-content: space-between;
+                justify-content: flex-start;
+
                 .review-user-img {
-                    margin-top: 10px;
+                    align-self: center;
+                    // margin-top: 10px;
                     width: 45px;
                     height: 45px;
                     border-radius: 50%;
+                    // padding-right: 10px;
+                }
+                h4{
+                    padding-left: 10px;
                 }
             }
         }
 
-        
+
     }
 }
-
