--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -25,6 +25,7 @@
             align-items: center;
             justify-content: space-between;
             cursor: pointer;
+
             // .searchbar-container {
             //     align-self: flex-end;
             //     // display: flex;
@@ -274,14 +275,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            &:hover{
-                box-shadow: 0 2px 4px rgba(0,0,0,0.18);;
+
+            &:hover {
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+                ;
             }
 
 
             svg {
                 overflow: hidden;
-                path{
+
+                path {
                     height: 10px;
                     width: 10px;
                 }
@@ -319,13 +323,13 @@
                 justify-content: center;
                 align-items: center;
                 // padding: 10px 0;
-                
+
                 // display: flex;
                 // flex-direction: column;
                 background-color: #fff;
                 border-radius: 12px;
                 box-shadow: 0 0 3px 0 rgb(0 0 0 / 18%);
-                
+
 
                 // :first-child {
                 //     // border-radius: 20px 0 0 0;
@@ -343,8 +347,10 @@
                     gap: 10px;
                     flex-direction: column;
                     justify-content: space-evenly;
-
+                    width: 100%;
                     
+
+
                     .noti-icon {
 
                         position: absolute;
@@ -353,36 +359,37 @@
                         color: var(--logo-color)
                     }
 
-                        .login-opt-btn {
-                            font-size: 18px;
-                            margin: 0;
-                            padding: 5px 0px;
-                            gap: 10px;
-                            width: 94%;
-                            padding-left: 10px;
-                            // border-radius: 20px 20px 20px 20px;
-                            display: flex;
-                            flex-direction: row;
-                            height: 1.1em;
-                            justify-content: flex-start;
-                            // margin-left: 20px;
-                            // overflow: hidden;
-                            // box-sizing: border-box;
+                    .login-opt-btn {
+                        font-size: 18px;
+                        margin: 0;
+                        padding: 5px 0px;
+                        gap: 10px;
+                        // width: 100%;
+                        padding-left: 20px;
+                        // border-radius: 20px 20px 20px 20px;
+                        display: flex;
+                        flex-direction: row;
+                        height: 1.1em;
+                        justify-content: flex-start;
+                        // margin-left: 20px;
+                        // overflow: hidden;
+                        // box-sizing: border-box;
 
 
-                            &:hover {
-                                background-color: var( --btn-background-color) ;
+                        &:hover {
+                            background-color: var(--btn-background-color);
 
-                            }
-                          
                         }
 
-                        .nav-btn {
-                            cursor: pointer;
-                        }
+                    }
 
-                    
+                    .nav-btn {
+                        cursor: pointer;
+                    }
+
+
                 }
+
                 .login-slide-modal-open & {
 
                     display: flex;
@@ -394,25 +401,25 @@
                     // padding: 2px;
 
 
-                    
+
                     .noti-tab {
 
-                    color: var(--font-dark-color);
-                    width: 200px;
-                    background-color: var(--main-background-color);
-                    border: 1px solid var(--font-lightgray-color);
-                    border-radius: 10px 0 10px 10px;
-                    position: absolute;
-                    top: 36px;
-                    right:10%;
-                    padding: 6px;
-                    justify-content: center;
-                    align-items: center;
-                    
-                    .noti-btn {
-                        margin: 5px;
+                        color: var(--font-dark-color);
+                        width: 200px;
+                        background-color: var(--main-background-color);
+                        border: 1px solid var(--font-lightgray-color);
+                        border-radius: 10px 0 10px 10px;
+                        position: absolute;
+                        top: 36px;
+                        right: 10%;
+                        padding: 6px;
+                        justify-content: center;
+                        align-items: center;
+
+                        .noti-btn {
+                            margin: 5px;
+                        }
                     }
-                }
 
                 }
 
