--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -141,7 +141,7 @@
                 justify-content: space-evenly;
                 border-radius: 20px;
                 cursor: pointer;
-                width: 400px;
+                max-width: 400px;
                 // gap: 15px;
                 background-color: var(--card-background-color);
                 overflow: hidden;
