--- a/src/styles/components/user-msg.scss
+++ b/src/styles/components/user-msg.scss
@@ -27,13 +27,13 @@
 		}
 	}
 
-	// &.success {
-	// 	background-color: #9df89d;
-	// }
+	&.success {
+		background-color: #9df89d;
+	}
 
-	// &.bnb {
-	// 	background-color: #cd3f3f;
-	// }
+	&.bnb {
+		background-color: #cd3f3f;
+	}
 }
 
 .close-user-msg {
