scss mobile res parceal

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,3 +46,7 @@
 
 // BACK OFFICE
 @import 'components/user-back-office/user-back-office.scss';
+
+
+//MEDIA QUARIES
+@import 'setup/media-quary.scss'
