--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -19,6 +19,7 @@
             margin-bottom: 20px;
             line-height: 18px;
             border-radius: 20px;
+            // margin: auto ;
             // row-gap: 10px;
             cursor: pointer;
 
@@ -68,6 +69,9 @@
         }
     }
 }
+
+
+
 
 
 .cycle-btn-container {
