--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -51,7 +51,7 @@
                 box-shadow: 0px 2px 5px var(--font-gray-color);
                 transition: 0.4s;
                 position: absolute;
-                top: 35px;
+                top: 55px;
                 left: 50%;
                 transform: translateX(-50%);
                 transition: 0.6s;
@@ -155,6 +155,9 @@
                 margin: 0;
                 padding-bottom: 0;
                 transition: 0.6s;
+                background-color: var(--card-background-color);
+                overflow: hidden;
+                border-radius: 35px;
 
                 >* {
                     align-self: center;
