--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -181,6 +181,9 @@
         gap: 15px;
         justify-content: space-between;
         margin-bottom: 80px;
+        .stay-previw{
+            word-wrap: break-word;
+        }
     }
 }
 
