--- a/src/styles/setup/media-quary.scss
+++ b/src/styles/setup/media-quary.scss
@@ -318,6 +318,15 @@
         }
     }
 
+    .user-back-office{
+        .backoffice-nav{
+            width: 350px;
+            .css-1ujnqem-MuiTabs-root{
+                font-size: 14px !important;
+            }
+        }
+    }
+
 
 
     .AppFooter {
