--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -19,7 +19,7 @@
             margin-bottom: 20px;
             line-height: 18px;
             border-radius: 20px;
-            // margin: auto ;
+            margin: auto ;
             // row-gap: 10px;
             cursor: pointer;
 
