--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -119,6 +119,7 @@
                 font-size: 16px;
                 color: var(--main-background-color);
                 display: flex;
+                justify-content: flex-end;
                 align-items: center;
                 flex-wrap: wrap;
                 gap: 10px;
